# moth_ui

./: .clang-tidy  .clangd  .gitignore  .gitmodules  BUILD.txt  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  REVIEW.md  TODO.md  TODO.txt  cliff.toml  conanfile.py  conanfile.txt  flipbook_plan.md
backends/: CMakeLists.txt  conanfile.py
backends/include/: application.h  iapplication.h  igraphics_context.h
backends/include/events/: event.h
backends/include/sdl/: SDL_FontCache.h  sdl_app.h  sdl_application.h  sdl_font_factory.h  sdl_graphics.h  sdl_ttf_shim.h  sdl_ui_renderer.h  smart_sdl.h
backends/include/vulkan/: vulkan_app.h  vulkan_application.h  vulkan_command_buffer.h  vulkan_context.h  vulkan_events.h  vulkan_font.h  vulkan_font_cache.h  vulkan_font_factory.h  vulkan_framebuffer.h  vulkan_graphics.h  vulkan_image.h  vulkan_shader.h  vulkan_swapchain.h  vulkan_ui_renderer.h
backends/src/: application.cpp  common.h  stb_rect_pack.h  utils.h
backends/src/sdl/: SDL_FontCache.c  sdl_app.cpp  sdl_app.h  sdl_events.cpp  sdl_font.cpp  sdl_font.h  sdl_font_factory.cpp  sdl_graphics.cpp  sdl_graphics.h  sdl_image.cpp  sdl_image.h  sdl_image_factory.cpp  sdl_ttf_shim.c  sdl_ui_renderer.cpp  sdl_utils.h
backends/src/vulkan/: vulkan_app.cpp  vulkan_app.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.cpp  vulkan_events.cpp  vulkan_fence.cpp  vulkan_font.cpp  vulkan_font_cache.cpp  vulkan_font_factory.cpp  vulkan_framebuffer.cpp  vulkan_graphics.cpp  vulkan_graphics.h  vulkan_image.cpp  vulkan_image_factory.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_shader.cpp  vulkan_subimage.cpp  vulkan_swapchain.cpp  vulkan_ui_renderer.cpp
backends/src/vulkan/shaders/: drawing_shader.frag  font.vert  update_shader_source.bat  vulkan_shaders.cpp  vulkan_shaders.h
editor/: CMakeLists.txt  README.md  basic.json  conanfile.py  conanfile.txt  editor.json  imgui.ini  sub_test.json  test.json  window_config.json
editor/resources/: drawing_frag.spv  drawing_vert.spv  font_frag.spv  font_vert.spv  image_vert.spv
editor/src/: app.cpp  app.h  common.h  editor_application.cpp  editor_application.h  event_factory.cpp  event_factory.h  font.cpp  font.h  font_factory.cpp  font_factory.h  game.cpp  game.h  iapp.h  image.cpp  image.h  image_factory.cpp  image_factory.h  main.cpp  sdl_app.cpp  sdl_app.h  smart_sdl.h  ui_renderer.cpp  ui_renderer.h  utils.h  vulkan_app.cpp  vulkan_app.h
editor/src/backend/: igraphics_context.h
editor/src/backend/sdl/: SDL_FontCache.h  sdl_app.cpp  sdl_app.h  sdl_events.cpp  sdl_events.h  sdl_font.cpp  sdl_font_factory.cpp  sdl_font_factory.h  sdl_graphics.cpp  sdl_graphics.h  sdl_image.cpp  sdl_image.h  sdl_image_factory.h  sdl_ttf_shim.c  sdl_ttf_shim.h  sdl_ui_renderer.cpp  sdl_ui_renderer.h
editor/src/backend/vulkan/: font_factory_vulkan.cpp  image_factory_vulkan.cpp  image_factory_vulkan.h  ui_renderer_vulkan.cpp  ui_renderer_vulkan.h  vulkan_app.cpp  vulkan_app.h  vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_events.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_font.cpp  vulkan_font.h  vulkan_font_cache.cpp  vulkan_font_cache.h  vulkan_font_factory.cpp  vulkan_font_factory.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_graphics.cpp  vulkan_graphics.h  vulkan_image.cpp  vulkan_image.h  vulkan_image_factory.cpp  vulkan_image_factory.h  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_subimage.cpp  vulkan_subimage.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_ui_renderer.cpp  vulkan_ui_renderer.h  (+1 more)
editor/src/backends/: backend_imgui.h  backend_utils.h  igraphics.h
editor/src/backends/sdl/: sdl_app.cpp  sdl_app.h  sdl_event_factory.cpp  sdl_event_factory.h  sdl_font.cpp  sdl_font.h  sdl_font_factory.cpp  (+12 more)
editor/src/editor/: anchor_bounds_handle.cpp  anchor_bounds_handle.h  animation_widget.cpp  animation_widget.h  bounds_handle.cpp  bounds_handle.h  bounds_widget.cpp  bounds_widget.h  confirm_prompt.cpp  confirm_prompt.h  content_list.cpp  content_list.h  editor_config.h  editor_layer.cpp  editor_layer.h  editor_layer_stack.cpp  editor_layer_stack.h  element_utils.h  imgui_ext.cpp  imgui_ext.h  imgui_ext_focus.cpp  imgui_ext_inspect.h  keyframe_context.h  keyframe_widget.cpp  keyframe_widget.h  layout_project.h  offset_bounds_handle.cpp  offset_bounds_handle.h  preview_window.cpp  preview_window.h  properties_editor.cpp  properties_editor.h  properties_elements.cpp  properties_elements.h  texture_packer.cpp  texture_packer.h  utils.h
editor/src/layers/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
editor/test_project/layouts/: Basic.json  bg.json  slice.json  sub.json  title.mothui
example/: CMakeLists.txt  conanfile.py  example.json
example/assets/: fonts.json  test_project.json
example/assets/layouts/: button.mothui  demo.mothui  menu.mothui  text.mothui  title.mothui  ui_test.mothui
example/src/: example_application.cpp  example_application.h  example_layer.cpp  example_layer.h  main.cpp  ui_button.cpp  ui_button.h
tests/: CMakeLists.txt  conanfile.py  conanfile.txt
tests/src/: api_surface_animation.cpp  api_surface_events.cpp  api_surface_factories.cpp  api_surface_fwd.cpp  api_surface_graphics.cpp  api_surface_layout.cpp  api_surface_nodes.cpp  api_surface_umbrella.cpp  mock_context.h  string_helpers.h  test_animation_clip.cpp  test_animation_clip_controller.cpp  test_animation_event.cpp  test_animation_marker.cpp  test_animation_track.cpp  test_color.cpp  test_discrete_animation_track.cpp  test_discrete_animation_track_controller.cpp  test_event_dispatch.cpp  test_event_key.cpp  test_flow.cpp  test_flow_graph.cpp  test_group.cpp  test_interp.cpp  test_layer_stack.cpp  test_layout_cache.cpp  test_layout_rect.cpp  test_layout_serialization.cpp  test_logger.cpp  test_node.cpp  test_node_entity.cpp  test_node_factory.cpp  test_node_flipbook.cpp  test_rect.cpp  test_transform.cpp  test_vector.cpp  test_vector_utils.cpp
(+345 files in other folders)
